--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "main": "BackEnd/index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false && npm install --prefix frontend && npm run build --prefix frontend",
+    "start":"node BackEnd/index.js"
   },
+  
   "author": "vikas",
   "license": "ISC",
   "dependencies": {
